# explore-georust

./: .gitignore  README.md
analysis/area_numerical_stability/: data.json  main.ipynb
analysis/benchmark_area/: data-nodbg.json  data.json  geo::algorithm::area::get_linestring_area.annotation  geo_area.hist  geo_area_simplified.hist  geos::algorithm::Area::ofRingSigned.annotation  geos::geom::CoordinateArraySequence::getAt.annotation  geos_area.hist  geos_area_simplified.hist  main.ipynb  std::vector<geos::geom::Coordinate, std::allocator<geos::geom::Coordinate> >::operator[].annotation
analysis/benchmark_area_india/: data.json  main.ipynb
analysis/benchmark_centroid/: data-nodbg.json  data.json  geo_add_ring_simplified.annotation  geo_centroid.hist  geo_centroid_simplified.hist  geos::algorithm::Centroid::addShell.annotation  geos::geom::Coordinate::distance.annotation  geos_centroid.hist  geos_centroid_simplified.hist  index-operator-callee.hist  main.ipynb
analysis/benchmark_convex_hull/: data-nodbg.json  data.json  geo.hist  geos.hist  geos_largest_self.hist  main.ipynb
analysis/benchmark_mbr/: data-nodbg.json  data.json  geo_bounding_rect_simplified.annotation  geo_mbr.hist  geo_rect_new_simplified.annotation  geos_mbr.hist  geos_mbr_simplified.hist  main.ipynb  perf-nodbg.data.old  perf.hist.0
analysis/benchmark_trivial/: data.json  main.ipynb
analysis/common/: benchmark_analysis.ipynb
explore_geo/: Cargo.toml
harness/: Cargo.toml  scratch_data.json
harness/src/: data.rs  lib.rs
harness/src/notsofine/: mod.rs  simple.rs
(+2 files in other folders)
